--- a/breakout-ish/.vscode/settings.json
+++ b/breakout-ish/.vscode/settings.json
@@ -35,6 +35,13 @@
         "utility": "cpp",
         "algorithm": "cpp",
         "iostream": "cpp",
-        "stack": "cpp"
+        "stack": "cpp",
+        "cstdarg": "cpp",
+        "cstddef": "cpp",
+        "atomic": "cpp",
+        "chrono": "cpp",
+        "list": "cpp",
+        "numeric": "cpp",
+        "ratio": "cpp"
     }
 }
