clang-format dosyası eklendi ve kod dosyaları formatlandı.

--- a/breakout-ish/.vscode/settings.json
+++ b/breakout-ish/.vscode/settings.json
@@ -42,6 +42,7 @@
         "chrono": "cpp",
         "list": "cpp",
         "numeric": "cpp",
-        "ratio": "cpp"
+        "ratio": "cpp",
+        "map": "cpp"
     }
 }
