[breakout-ish] Brick sınıfı eklendi ve basit seviye uygulaması yapıldı.

--- a/breakout-ish/CMakeLists.txt
+++ b/breakout-ish/CMakeLists.txt
@@ -15,6 +15,7 @@ else()
 endif (WIN32)
 
 set(HEADERS
+            include/Entities/Brick.hpp
             include/Entities/Ball.hpp
             include/Entities/Paddle.hpp
             include/Scenes/PlayScene.hpp
@@ -29,6 +30,7 @@ set(HEADERS
             include/Game.hpp)
 
 set(SOURCES
+            src/Entities/Brick.cpp
             src/Entities/Ball.cpp
             src/Entities/Paddle.cpp
             src/Scenes/PlayScene.cpp
